[package]
name = "state_estimator_msgs"
version = "0.0.1"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
geometry_msgs = "*"
builtin_interfaces = "*"
sensor_msgs = "*"
service_msgs = "*"
std_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'geometry_msgs/serde', 'builtin_interfaces/serde', 'sensor_msgs/serde', 'service_msgs/serde', 'std_msgs/serde']
